# paddle-paddle-v6-ocr-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build_dist.sh  justfile
assets/: demo.html  swagger.html
deploy/: README.md  ocr-servos.conf  ppocr-server.service
models/supra/: config.json  tokenizer.json
src/: api.rs  config.rs  docs.rs  embedded.rs  engine.rs  geometry.rs  main.rs  postprocess.rs  preprocess.rs  recognize.rs  remote.rs  understanding.rs
training/: .gitignore  README.md  conv_pc.py  eval_any.py  gen_id.py  sidecar.py
training/candle-extract/: Cargo.toml
training/candle-extract/src/: main.rs
