[package]
name = "ppocr-server"
version = "0.1.0"
edition = "2021"
description = "Cross-platform PP-OCRv6 OCR REST API (detection + recognition, pure-Rust ONNX via tract, embedded models)"
license = "Apache-2.0"

[[bin]]
name = "ppocr-server"
path = "src/main.rs"

[features]
# Each size feature embeds BOTH the detection and recognition model of that size.
default = ["tiny", "small", "medium"]
tiny = []
small = []
medium = []

[dependencies]
# Pure-Rust ONNX inference -> clean cross-compilation with cargo-zigbuild
tract-onnx = "0.21"
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# Image decode + grayscale/contours
image = "0.25"
imageproc = "0.25"
# Data-parallel recognition across detected lines
rayon = "1"
# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# CLI / logging / errors
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
