[package]
name = "ppocr-server"
version = "0.1.0"
edition = "2021"
description = "Cross-platform PP-OCRv6 OCR REST API with runtime-fetched models and pure-Rust ONNX via tract"
license = "Apache-2.0"
repository = "https://github.com/drmhse/paddle-paddle-v6-ocr-rust"

[[bin]]
name = "ppocr-server"
path = "src/main.rs"

[features]
# Each size feature enables BOTH the detection and recognition model of that size.
# Weights are fetched on first run; only tiny metadata files are embedded.
default = ["tiny", "small", "medium"]
tiny = []
small = []
medium = []
# Optional structured-understanding stage: fetches a LoRA-fused Supra-50M model
# and runs it on candle. Off by default so the OCR-only build stays lean.
understanding = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]

[dependencies]
# Pure-Rust ONNX inference -> clean cross-compilation with cargo-zigbuild
tract-onnx = "0.21"
# Remote model fetch + cache + verify (models are no longer embedded)
ureq = "2"
sha2 = "0.10"
# Understanding stage (optional, feature = "understanding"): pure-Rust LLM inference
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# Image decode + grayscale/contours
image = "0.25"
imageproc = "0.25"
# Data-parallel recognition across detected lines
rayon = "1"
# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# CLI / logging / errors
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
